force-app/main/default/objects/Officer__c/fields/Appointed_On__c.field-meta.xml
<CustomField>
    <fullName>Appointed_On__c</fullName>
    <label>Appointed On</label>
    <type>Date</type>
</CustomField>