force-app/main/default/objects/Officer__c/fields/Companies_House_Run__c.field-meta.xml
<CustomField>
    <fullName>Companies_House_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Companies House Run</label>
    <type>Checkbox</type>
</CustomField>