force-app/main/default/objects/Officer__c/fields/Company_Director__c.field-meta.xml
<CustomField>
    <fullName>Company_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Director</label>
    <type>Checkbox</type>
</CustomField>