force-app/main/default/objects/Officer__c/fields/Country_of_residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_residence__c</fullName>
    <label>Country of residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>