force-app/main/default/objects/Officer__c/fields/Date_of_Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Month__c</fullName>
    <label>Date of Birth Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>