force-app/main/default/objects/Officer__c/fields/Date_of_Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Year__c</fullName>
    <label>Date of Birth Year</label>
    <type>Date</type>
</CustomField>