force-app/main/default/objects/Officer__c/fields/Officer_Key__c.field-meta.xml
<CustomField>
    <fullName>Officer_Key__c</fullName>
    <label>Officer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>