force-app/main/default/objects/Officer__c/fields/Officer_Role__c.field-meta.xml
<CustomField>
    <fullName>Officer_Role__c</fullName>
    <label>Officer Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>