force-app/main/default/objects/Officer__c/fields/Person_with_Significant_Control__c.field-meta.xml
<CustomField>
    <fullName>Person_with_Significant_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person with Significant Control</label>
    <referenceTo>Person_with_Significant_Control__c</referenceTo>
    <relationshipLabel>Officers</relationshipLabel>
    <relationshipName>Officers</relationshipName>
    <type>Lookup</type>
</CustomField>