force-app/main/default/objects/Officer__c/fields/Resident_Country__c.field-meta.xml
<CustomField>
    <fullName>Resident_Country__c</fullName>
    <label>Resident Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>