force-app/main/default/objects/Officer__c/fields/Resigned_On__c.field-meta.xml
<CustomField>
    <fullName>Resigned_On__c</fullName>
    <label>Resigned On</label>
    <type>Date</type>
</CustomField>